# oop-8-project

./: .gitignore  README.md
src/: CMakeLists.txt  main.cpp
src/.qtcreator/: CMakeLists.txt.user.81cd175
src/backend/models/: bill.cpp  bill.h  budget.cpp  budget.h  category.cpp  category.h  saving.cpp  saving.h  transaction.cpp  transaction.h
src/backend/storage/: database_manager.cpp  database_manager.h  database_manager_bill.cpp  database_manager_budget.cpp  database_manager_category.cpp  database_manager_saving.cpp  database_manager_transaction.cpp
src/data/: bills.csv  budgets.csv  categories.csv  savings.csv  transactions.csv
src/frontend/: bills_controller.cpp  budgets_controller.cpp  categories_controller.cpp  overview_controller.cpp  reports_controller.cpp  savings_controller.cpp  transactions_controller.cpp
src/frontend/bills/: bills_controller.cpp
src/frontend/budgets/: budgets_controller.cpp  budgets_controller.h
src/frontend/categories/: categories_controller.cpp  categories_controller.h
src/frontend/overview/: overview_controller.cpp  overview_controller.h
src/frontend/reports/: reports_controller.cpp
src/frontend/transactions/: transactions_controller.cpp  transactions_controller.h
src/gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/gui/bills/: bills_widget.cpp  bills_widget.h  bills_widget.ui
src/gui/budgets/: budgets_widget.cpp  budgets_widget.h  budgets_widget.ui
src/gui/categories/: add_category_dialog.cpp  add_category_dialog.h  add_category_dialog.ui  add_remove_button.h  categories_widget.cpp  categories_widget.h  categories_widget.ui  category_remove_button.cpp  category_remove_button.h
src/gui/overview/: overview_widget.cpp  overview_widget.h  overview_widget.ui
src/gui/reports/: reports_widget.cpp  reports_widget.h  reports_widget.ui
src/gui/transactions/: add_transaction_dialog.cpp  add_transaction_dialog.h  transaction_dialog.cpp  transaction_dialog.h  transaction_dialog.ui  transactions_widget.cpp  transactions_widget.h  transactions_widget.ui
src/qml/: Main.qml
src/qml/pages/: dummy_page.qml
